# sdx-sdx

./: Cargo.toml  package.json  snowpack.config.js  tsconfig.json
src/: lib.rs  util.rs
src/surface/: mod.rs
src/surface/graphics/: mod.rs  program.rs
ui/: App.vue  bootstrapper.ts  index.html  main.js
ui/Layout/: SdxEditor.vue  SdxFooter.vue  SdxHeader.vue  SdxSurface.vue  _toolbar.scss  _variables.scss
ui/dependencies/: bootstrap.ts
ui/shaders/: index.ts  mouseSampleFs.ts  shaderToyFs.ts  simpleRedFs.ts
ui/wasm/: package.json  sdx_sdx.d.ts  sdx_sdx.js  sdx_sdx_bg.wasm  sdx_sdx_bg.wasm.d.ts
