[package]
name = "sdx-sdx"
version = "0.1.0"
authors = ["Tobias Schindler <t.schindler@gambio.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.71"
js-sys = "0.3.49"

[dependencies.web-sys]
version = "0.3.49"
features = [
    "console",
    'Window',
    'Document',
    'HtmlElement',
    'HtmlCanvasElement',
    'CssStyleDeclaration',
    "WebGlRenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlBuffer",
    "WebGlUniformLocation"
]
